refactor: US1 & US2 refactorized and fixed
Both user stories needed a lot of work because it was practically reinit
the project. I found that the previous implementation was wrong because
it search reservations at a specific time and not the free rooms.